# demoproject

./: .gitignore  CMakeLists.txt  README.md  README.txt  main.cpp  makepages.sh
data/: boxfragment.glsl  demofragment.glsl  demovertex.glsl  fragment.glsl  sourcecodepro-medium.json  textfragment.glsl  vertex.glsl
pages/: DemoProject.data  DemoProject.html  DemoProject.js  server.sh
scripts/: server.sh.in
src/: BaseApp.cpp  BaseApp.h  BoxRenderer.cpp  BoxRenderer.h  CameraComponent.h  CameraInputComponent.h  CameraInputSystem.cpp  CameraInputSystem.h  CameraSystem.cpp  CameraSystem.h  Demo.cpp  Demo.h  DemoColorAnimationComponent.h  DemoSystem.cpp  DemoSystem.h  Font.cpp  Font.h  GLFWLib.h  GlobalComponent.h  InputComponent.h  InputSystem.cpp  InputSystem.h  MouseTrailComponent.h  MouseTrailSystem.cpp  MouseTrailSystem.h  TextRenderer.cpp  TextRenderer.h  WebApp.cpp  WebApp.h  WindowApp.cpp  WindowApp.h  WindowSize.h  WindowSizeComponent.h  WindowSizeSystem.cpp  WindowSizeSystem.h  main.cpp
src/Core/: Font.cpp  Font.h  GLFWLib.h  Result.h  ShaderHelpers.cpp  ShaderHelpers.h  ShaderProgram.cpp  ShaderProgram.h
src/ut/: ResultTest.cpp  ShadersTest.cpp  test.cpp
